--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
           <input type="text" placeholder="Your Email">
         </div>
         <input type="text" placeholder="Your Subject" class="subject">
-        <textarea placeholder="Your Message"></textarea>
+        <textarea rows="5" placeholder="Your Message"></textarea>
         <div class="btn_sendMsg">Send Message</div>
       </div>
     </div>
