work page + minor changes

--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,8 @@
   <body>
     <!-- --------- HEADER ---------- -->
     <header>
-      <h1>Logo</h1>
+      <img src="images/logo.png" alt="" />
+
       <div class="hamburger-icon">
         <label for="menu"></label>
         <input type="checkbox" name="menu" id="menu" />
@@ -75,12 +76,6 @@
     <footer class="footer_dark">
       <div class="container">
         <h1>Logo</h1>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-          eiusmod tempor inci- didunt ut labore et dolore magna aliqua. Ut enim
-          ad minim veniam, quis nostrud exe- rcitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat.
-        </p>
         <div class="social_links">
           <div class="social_link">
             <i class="fa fa-facebook"></i>
