--- a/work.html
+++ b/work.html
@@ -4,9 +4,74 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Work</title>
+    <link rel="stylesheet" href="./styles/main.scss" />
+    <title>Siam Khondoker's Portfolio</title>
   </head>
   <body>
-    work
+    <!-- --------- HEADER ---------- -->
+    <header>
+      <img src="images/logo.png" alt="" />
+
+      <div class="hamburger-icon">
+        <label for="menu"></label>
+        <input type="checkbox" name="menu" id="menu" />
+      </div>
+      <div class="menu__body">
+        <ul>
+          <li>
+            <a href="/">Home</a>
+          </li>
+          <li>
+            <a href="#services">Services</a>
+          </li>
+          <li>
+            <a href="#about">About</a>
+          </li>
+          <li>
+            <a href="#skills">Skills</a>
+          </li>
+          <li>
+            <a href="/portfolio.html">Portfolio</a>
+          </li>
+          <li>
+            <a href="#blog">Blog</a>
+          </li>
+          <li>
+            <a href="#contact">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </header>
+
+    <!-- --------- WORK ---------- -->
+    <div class="work"></div>
+
+    <!-- --------- FOOTER ---------- -->
+    <footer class="footer_dark">
+      <div class="container">
+        <h1>Logo</h1>
+        <div class="social_links">
+          <div class="social_link">
+            <i class="fa fa-facebook"></i>
+          </div>
+          <div class="social_link">
+            <i class="fa fa-linkedin"></i>
+          </div>
+          <div class="social_link">
+            <i class="fa fa-instagram"></i>
+          </div>
+          <div class="social_link">
+            <i class="fa fa-dribbble"></i>
+          </div>
+        </div>
+      </div>
+      <p>
+        Copyright © 2021 <a href="/">Ami.Ke </a> All Rights Reserved by
+        ThemeBing.
+      </p>
+    </footer>
+
+    <script src="https://use.fontawesome.com/0c543e37a3.js"></script>
+    <script src="./scripts/work.js"></script>
   </body>
 </html>
