onload loading done

--- a/work.html
+++ b/work.html
@@ -10,7 +10,7 @@
   <body>
     <!-- --------- HEADER ---------- -->
     <header>
-      <img src="images/logo.png" alt="" />
+      <a href="/"> <img src="images/logo.png" alt="" /></a>
 
       <div class="hamburger-icon">
         <label for="menu"></label>
@@ -47,9 +47,9 @@
     <div class="work"></div>
 
     <!-- --------- FOOTER ---------- -->
-    <footer class="footer_dark">
+    <footer>
       <div class="container">
-        <h1>Logo</h1>
+        <img class="sign" src="./images/sign.png" alt="" />
         <div class="social_links">
           <div class="social_link">
             <i class="fa fa-facebook"></i>
@@ -66,12 +66,20 @@
         </div>
       </div>
       <p>
-        Copyright © 2021 <a href="/">Ami.Ke </a> All Rights Reserved by
+        Copyright © 2021 <a href="/work.html">Ami.Ke </a> All Rights Reserved by
         ThemeBing.
       </p>
     </footer>
 
-    <script src="https://use.fontawesome.com/0c543e37a3.js"></script>
+    <div class="loader_container">
+      <div class="loader">
+        <div class="shade shade-1"></div>
+        <div class="shade shade-2"></div>
+        <div class="shade shade-3"></div>
+      </div>
+    </div>
+
+    <script src="./scripts/lib/fontawesome.js"></script>
     <script src="./scripts/work.js"></script>
   </body>
 </html>
