--- a/index.html
+++ b/index.html
@@ -12,12 +12,15 @@
     <link rel="stylesheet" href="./node_modules//slick-carousel/slick/slick.css">
     
     <link rel="stylesheet" href="./styles/main.scss" />
+
+    <script src="./scripts/lib/fontawesome.js"></script>
+
     
   </head>
   <body>
     <!-- --------- HEADER ---------- -->
     <header>
-      <img src="images/logo.png" alt="">
+      <a href="/"> <img src="images/logo.png" alt="" /></a>
       <div class="hamburger-icon">
         <label for="menu"></label>
         <input type="checkbox" name="menu" id="menu" />
@@ -309,8 +312,16 @@
       <p>Copyright © 2021 <a href="/work.html">Ami.Ke </a> All Rights Reserved by ThemeBing. </p>
     </footer>
 
+    <div class="loader_container">
+      <div class="loader">
+        <div class="shade shade-1"></div>
+        <div class="shade shade-2"></div>
+        <div class="shade shade-3"></div>
+      </div>
+    </div>
+
     </script>
-    <script src="https://use.fontawesome.com/0c543e37a3.js"></script>
+    <!-- <script src="https://use.fontawesome.com/0c543e37a3.js"></script> -->
     <script src="./scripts/main.js"></script>
   </body>
   </html>
