--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     
     <link rel="stylesheet" href="./styles/main.scss" />
 
-    <script src="./scripts/lib/fontawesome.js"></script>
 
     
   </head>
@@ -320,8 +319,7 @@
       </div>
     </div>
 
-    </script>
-    <!-- <script src="https://use.fontawesome.com/0c543e37a3.js"></script> -->
+    <script src="https://use.fontawesome.com/0c543e37a3.js"></script>
     <script src="./scripts/main.js"></script>
   </body>
   </html>
