--- a/portfolio.html
+++ b/portfolio.html
@@ -105,7 +105,7 @@
       </div>
     </div>
 
-    <script src="./scripts/lib/fontawesome.js"></script>
+    <script src="https://use.fontawesome.com/0c543e37a3.js"></script>
     <script src="./scripts/portfolio.js"></script>
   </body>
 </html>
