--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
           </div>
         </div>
       </div>
-      <p>Copyright © 2021 <a href="/work.html">Ami.Ke </a> All Rights Reserved by ThemeBing. </p>
+      <!-- <p>Copyright © 2021 <a href="/work.html">Ami.Ke </a> All Rights Reserved by ThemeBing. </p> -->
     </footer>
 
     <div class="loader_container">
